@@ -1,3 +1,11 @@
+2006-12-18  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
+
+	* commit.py: Added 'state' property
+	* repository.py:
+	   - pattern5 modified. It now reads also the 'state' field from the log.
+	   - 'state' field is now read from the log text
+	* tables.py: Added 'state' field to table 'log'
+
 2006-12-08  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>
 
 	* generations.py: Simplified and more generic code. Now
